<resources>
    <string name="app_name">Smaranka</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_button">Start</string>
    <string name="random_number_button_text">Go!</string>
    <string name="hello_blank_fragment">Whatever the fuck</string>
    <string name="recall_button_text">RECALL</string>
    <string name="enter_text">Enter text</string>
    <string name="restart_text">Restart</string>
    <string name="num_digits_text">Digits per turn</string>
    <string name="max_num_text">Maximum number</string>
    <string name="time_limit_text">Time Limit:</string>
    <string name="high_score_text">High Score: 0</string>
    <string name="ans_hint">Type answer here..</string>
    <string name="random_numbers">Random Numbers</string>
    <string name="spoken_numbers">Spoken Numbers</string>
    <string name="speed_cards">Speed Cards</string>
    <string name="images">Images</string>
    <string name="words">Words</string>
    <string name="names">Names</string>
    <string name="international_names">International Names</string>
</resources>