<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/random_numbers_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:background="@drawable/round_button_with_states"
            android:textColor="@color/white"
            android:text="@string/random_numbers" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/spoken_numbers_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:background="@drawable/round_button_with_states"
            android:textColor="@color/white"
            android:text="@string/spoken_numbers" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/speed_cards_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:background="@drawable/round_button_with_states"
            android:textColor="@color/white"
            android:text="@string/speed_cards" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/images_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:background="@drawable/round_button_with_states"
            android:textColor="@color/white"
            android:text="@string/images" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/words_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:background="@drawable/round_button_with_states"
            android:textColor="@color/white"
            android:text="@string/words" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/names_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:background="@drawable/round_button_with_states"
            android:textColor="@color/white"
            android:text="@string/names" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fmc_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:background="@drawable/round_button_with_states"
            android:textColor="@color/white"
            android:text="@string/international_names" />

    </LinearLayout>
</FrameLayout>