<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/rand_num_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_button_with_states"
            android:contentDescription="Start session"
            android:foreground="@android:drawable/ic_media_play"
            android:foregroundGravity="center"
            android:minWidth="150dp"
            android:minHeight="150dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/digits_per_turn_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="400dp"
                android:minHeight="50dp"
                android:text="@string/num_digits_text"
                android:textColor="@color/light_crimson_red"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/digits_per_turn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:textColor="@color/crimson_red"
                android:hint="3"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/maximum_number_edit_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="400dp"
                android:minHeight="50dp"
                android:text="@string/max_num_text"
                android:textColor="@color/light_crimson_red"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/maximum_number_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:ems="10"
                android:textSize="20sp"
                android:hint="200"
                android:textColor="@color/crimson_red"
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_interval_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="400dp"
                android:minHeight="50dp"
                android:text="@string/time_limit_text"
                android:textColor="@color/light_crimson_red"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/time_interval_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:textColor="@color/crimson_red"
                android:hint="1 (min)"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/high_score_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:minWidth="400dp"
                android:minHeight="100dp"
                android:textStyle="bold"
                android:text="@string/high_score_text"
                android:textColor="@color/light_crimson_red"
                android:textSize="40sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>